# livraria

./: .env.exemplo  .env_exemplo  .gitignore  db.sqlite3  livraria_bkp.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_autor_livro.py  0002_livro_capa.py  0003_compra.py  0003_livro_editora.py  0004_itenscompra.py  0004_livro_autores.py  0005_compra_data_itenscompra_preco_item.py  0005_remove_livro_autores.py  0006_livro_autores.py
livraria/models/: __init__.py  autor.py  compra.py  livro.py
livraria/serializers/: __init__.py  autor.py  categoria.py  compra.py  editora.py  livro.py
livraria/views/: autor.py  categoria.py  compra.py  editora.py  livro.py
uploader/migrations/: 0001_initial.py
usuario/: admin.py  managers.py  models.py  serializers.py  views.py
usuario/migrations/: 0001_initial.py  0002_usuario_foto.py
