[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
]
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Marco", email = "marcoantoniorosario.academico@gmail.com"},
]
dependencies = [
    "django>=4.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
